# hachimi-converter

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  netease_playlist.json  pairs.jsonl  pairs_full.jsonl  pairs_with_urls.jsonl  pyproject.toml  train_colab.ipynb
scripts/: align_and_slice.py  align_v2.py  batch_inference.py  discriminator.py  download.py  download_orig.py  download_v2.py  download_vocoder.py  fetch_hachimi_world.py  fetch_orig_urls.py  hifigan_model.py  inference.py  inference_fm.py  losses.py  mel_utils.py  model.py  model_fm.py  slice_v2.py  test_bigvgan.py  train.py  train_fm.py  train_vocoder.py  validate_pairs.py  visualize.py
